# Assegnamento_PSE

./: 1_getting_started_with_pandas.ipynb  CMakeLists.txt  README.md  test_notebook.ipynb
app/: CMakeLists.txt
app/src/: main.cpp
lib/boid/: CMakeLists.txt
lib/boid/include/: boid.h
lib/boid/src/: boid.cpp
